--- a/test.html
+++ b/test.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hugo</title>
 </head>
 <body>
-
+<p><b>hugo hugo hugo aaaaaaaaaaaaaaaaaaaaaaa</b></p>
 </body>
 </html>
